--- a/src/item-page-login.html
+++ b/src/item-page-login.html
@@ -4,15 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./item-page.css">
+  <link rel="stylesheet" href="./index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="./item-page.js"></script>
+  <script src="./index.js"></script>
   <title>item-page</title>
 </head>
 <body>
-  <header>개쩌는 헤더</header>
+  <header>
+    <nav class="nav-bar">
+        <div class="nav-bar-items">
+          <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
+          <div class="nav-bar-menu">
+            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
+            <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
+            <a href="./item-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+          </div>
+        </div>
+    </nav>
+  </header>
   <section class="item-top-container">
     <!-- 상단 좌측 -->
     <div class="item-container">
@@ -55,6 +68,15 @@
       </div>
   </section>
   <main class="item-bottom-container">
+    <section class="popup-background search-popup-background">
+      <div class="popup search-popup">
+        <div class="btn" onclick="SearchPopupClose()">X</div>
+        <div class="search-box">
+          <input type="text" id="search-input">
+          <a href="./category-page-login.html"><img src="./img/search.svg" alt=""></a>
+        </div>
+      </div>
+    </section>
     <header>
       <p>상세정보</p>
       <p>리뷰</p>
