--- a/src/main-page-login.html
+++ b/src/main-page-login.html
@@ -29,7 +29,7 @@
   <header>
     <nav class="nav-bar">
         <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="./index.html" class="btn">부엉이 신발장</a></div>
+          <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
             <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
             <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
@@ -44,68 +44,8 @@
         <div class="btn" onclick="SearchPopupClose()">X</div>
         <div class="search-box">
           <input type="text" id="search-input">
-          <img src="./img/search.svg" alt="">
+          <a href="./category-page-login.html"><img src="./img/search.svg" alt=""></a>
         </div>
-      </div>
-    </section>
-    <section class="popup-background login-popup-background">
-      <div class="popup login-popup">
-        <div class="popup-close-btn">
-          <div class="btn" onclick="LoginPopupClose()">X</div>
-        </div>
-        <div class="ID-box">
-          <p>아이디</p>
-          <input type="text" class="auth-box-ID">
-        </div>
-        <div id="PW-box">
-          <p>비밀번호</p>
-          <input type="password" class="auth-box-ID">
-        </div>
-        <button class="btn auth-btn">로그인</button>
-        <div class="auto-login-btn-box">
-          자동로그인
-          <div class="auto-login-toggle-btn">
-            <input type="checkbox" id="toggle" hidden> 
-            <label for="toggle" class="toggleSwitch">
-              <span class="toggleButton"></span>
-            </label>
-          </div>
-        </div>
-        <div class="find-box">
-          아이디, 비밀번호를 잃어버리셨나요?<br>
-          <div class="find-btn-box">
-            <div class="find-btn"><a href="#" class="btn">아이디 찾기</a></div>
-            <div class="find-btn"><a href="#" class="btn">비밀번호 찾기</a></div>
-          </div>
-        </div>
-        <div class="signin-btn-box">
-          아직 부엉랑 친구가 아닌가요?
-          <button class="btn" onclick="SigninPopupOpen()">부엉이랑 친구하기</button>
-        </div>
-      </div>
-    </section>
-    <section class="popup-background signin-popup-background">
-      <div class="popup signin-popup">
-        <div class="popup-close-btn">
-          <div class="btn" onclick="SigninPopupClose()">X</div>
-        </div>
-        <div id="name-box" class="ID-box">
-          <p>이름</p>
-          <input type="text" class="auth-box-ID">
-        </div>
-        <div id="signin-ID-box" class="ID-box">
-          <p>아이디</p>
-          <input type="text" class="auth-box-ID">
-        </div>
-        <div id="signin-PW-box" class="PW-box">
-          <p>비밀번호</p>
-          <input type="password" class="auth-box-ID">
-        </div>
-        <div id="PW-check-box" class="PW-box">
-          <p>비밀번호 확인</p>
-          <input type="password" class="auth-box-ID">
-        </div>
-        <button class="btn" onclick="SigninPopupClose()">부엉이랑 친구하기</button>
       </div>
     </section>
     <section class="main-page-text-box">
@@ -115,11 +55,11 @@
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -136,11 +76,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -157,11 +97,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -178,11 +118,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -199,11 +139,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -220,11 +160,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -245,11 +185,11 @@
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -266,11 +206,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -287,11 +227,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -308,11 +248,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -329,11 +269,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -350,11 +290,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -375,11 +315,11 @@
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -396,11 +336,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -417,11 +357,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -438,11 +378,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -459,11 +399,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -480,11 +420,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-login.html">
+          <a href="./item-page-login.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-login.html" class="text-btn card-text-btn">
+            <a href="./item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
