--- a/src/main-page-logout.html
+++ b/src/main-page-logout.html
@@ -79,7 +79,7 @@
         </div>
         <div class="signin-btn-box">
           아직 부엉이랑 친구가 아닌가요?
-          <button class="btn" onclick="SigninPopupOpen()">부엉이랑 친구하기</button>
+          <button class="btn" onclick="SigninPopupOpen(), LoginPopupClose()">부엉이랑 친구하기</button>
         </div>
       </div>
     </section>
@@ -104,7 +104,7 @@
           <p>비밀번호 확인</p>
           <input type="password" class="auth-box-ID">
         </div>
-        <button class="btn" onclick="SigninPopupClose()">부엉이랑 친구하기</button>
+        <button class="btn" onclick="SigninPopupClose(), LoginPopupOpen()">부엉이랑 친구하기</button>
       </div>
     </section>
     <section class="main-page-text-box">
@@ -114,11 +114,42 @@
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
+              <div class="main-card-info main-card-info-head">
+                에어포스 1
+              </div>
+              <div class="main-card-info main-card-info-body">
+                <div class="size-option">
+                  <button class="size-option-btn">245</button>
+                  <button class="size-option-btn">250</button>
+                  <button class="size-option-btn">255</button>
+                  <button class="size-option-btn">260</button>
+                  <button class="size-option-btn">265</button>
+                  <button class="size-option-btn">270</button>
+                  <button class="size-option-btn">275</button>
+                  <button class="size-option-btn">280</button>
+                  <button class="size-option-btn">295</button>
+                </div>
+                <div class="colors">
+                  RED BLACK WHITE IVORY
+                </div>
+              </div>
+              <div class="main-card-info main-card-info-footer">
+                136,000깃털
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="main-card">
+          <a href="./item-page-logout.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
+          <div class="main-card-info-box">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -135,11 +166,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -156,11 +187,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -177,11 +208,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -198,32 +229,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
-              <div class="main-card-info main-card-info-head">
-                에어포스 1
-              </div>
-              <div class="main-card-info main-card-info-body">
-                <div class="sizes">240 245 250 255 260 265 270 275 280 285</div>
-                <div class="colors">
-                  RED BLACK WHITE IVORY
-                </div>
-              </div>
-              <div class="main-card-info main-card-info-footer">
-                136,000깃털
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="main-card">
-          <a href="./category-page-logout.html">
-            <img src="./img/shoes1.png" alt="shoes1">
-          </a>
-          <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -244,11 +254,11 @@
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -265,11 +275,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -286,11 +296,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -307,11 +317,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -328,11 +338,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -349,11 +359,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -374,11 +384,11 @@
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -395,11 +405,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -416,11 +426,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -437,11 +447,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -458,11 +468,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -479,11 +489,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./category-page-logout.html">
+          <a href="./item-page-logout.html">
             <img src="./img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./category-page-logout.html" class="text-btn card-text-btn">
+            <a href="./item-page-logout.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
