--- a/src/category-page-login.html
+++ b/src/category-page-login.html
@@ -30,68 +30,8 @@
         <div class="btn" onclick="SearchPopupClose()">X</div>
         <div class="search-box">
           <input type="text" id="search-input">
-          <a href="./category.html"><img src="./img/search.svg" alt=""></a>
+          <a href="./category-page-login.html"><img src="./img/search.svg" alt=""></a>
         </div>
-      </div>
-    </section>
-    <section class="popup-background login-popup-background">
-      <div class="popup login-popup">
-        <div class="popup-close-btn">
-          <div class="btn" onclick="LoginPopupClose()">X</div>
-        </div>
-        <div class="ID-box">
-          <p>아이디</p>
-          <input type="text" class="auth-box-ID">
-        </div>
-        <div id="PW-box">
-          <p>비밀번호</p>
-          <input type="password" class="auth-box-ID">
-        </div>
-        <button class="btn auth-btn">로그인</button>
-        <div class="auto-login-btn-box">
-          자동로그인
-          <div class="auto-login-toggle-btn">
-            <input type="checkbox" id="toggle" hidden> 
-            <label for="toggle" class="toggleSwitch">
-              <span class="toggleButton"></span>
-            </label>
-          </div>
-        </div>
-        <div class="find-box">
-          아이디, 비밀번호를 잃어버리셨나요?<br>
-          <div class="find-btn-box">
-            <div class="find-btn"><a href="#" class="btn">아이디 찾기</a></div>
-            <div class="find-btn"><a href="#" class="btn">비밀번호 찾기</a></div>
-          </div>
-        </div>
-        <div class="signin-btn-box">
-          아직 부엉이랑 친구가 아닌가요?
-          <button class="btn" onclick="SigninPopupOpen()">부엉이랑 친구하기</button>
-        </div>
-      </div>
-    </section>
-    <section class="popup-background signin-popup-background">
-      <div class="popup signin-popup">
-        <div class="popup-close-btn">
-          <div class="btn" onclick="SigninPopupClose()">X</div>
-        </div>
-        <div id="name-box" class="ID-box">
-          <p>이름</p>
-          <input type="text" class="auth-box-ID">
-        </div>
-        <div id="signin-ID-box" class="ID-box">
-          <p>아이디</p>
-          <input type="text" class="auth-box-ID">
-        </div>
-        <div id="signin-PW-box" class="PW-box">
-          <p>비밀번호</p>
-          <input type="password" class="auth-box-ID">
-        </div>
-        <div id="PW-check-box" class="PW-box">
-          <p>비밀번호 확인</p>
-          <input type="password" class="auth-box-ID">
-        </div>
-        <button class="btn" onclick="SigninPopupClose()">부엉이랑 친구하기</button>
       </div>
     </section>
     <main class="category-card-container">
@@ -111,41 +51,54 @@
       </nav>
       <div class="category-item-box">
         <ul class="category-box">
-          <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div>
-          </li>
-          <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div></li>
+          <a href="./item-page-login.html">
             <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div>
-          </li>
-          <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div>
-          </li>
-          <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div>
-          </li>
-          <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div>
-          </li>
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
+          <a href="./item-page-login.html">
+            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
+          <a href="./item-page-login.html">
+            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
+          <a href="./item-page-login.html">
+            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
+          <a href="./item-page-login.html">
+            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
+          <a href="./item-page-login.html">
+            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
         </ul>
       </div>
     </main>
