--- a/src/category-page-logout.html
+++ b/src/category-page-logout.html
@@ -18,7 +18,7 @@
           <div class="nav-bar-items">
             <div class="nav-bar-comp-name"><a href="./main-page-logout.html" class="btn" style="color: black;">부엉이 신발장</a></div>
             <div class="nav-bar-menu">
-              <button class="btn search-btn"><img src="./img/search.svg" alt=""></button>
+              <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
               <button class="btn nav-btn" onclick="SigninPopupOpen()">SIGNIN</button>
               <button class="btn nav-btn" onclick="LoginPopupOpen()">LOGIN</button>
             </div>
@@ -30,7 +30,7 @@
         <div class="btn" onclick="SearchPopupClose()">X</div>
         <div class="search-box">
           <input type="text" id="search-input">
-          <a href="./category.html"><img src="./img/search.svg" alt=""></a>
+          <a href="./category-page-logout.html"><img src="./img/search.svg" alt=""></a>
         </div>
       </div>
     </section>
@@ -66,7 +66,7 @@
         </div>
         <div class="signin-btn-box">
           아직 부엉이랑 친구가 아닌가요?
-          <button class="btn" onclick="SigninPopupOpen()">부엉이랑 친구하기</button>
+          <button class="btn" onclick="SigninPopupOpen(), LoginPopupClose()">부엉이랑 친구하기</button>
         </div>
       </div>
     </section>
@@ -91,7 +91,7 @@
           <p>비밀번호 확인</p>
           <input type="password" class="auth-box-ID">
         </div>
-        <button class="btn" onclick="SigninPopupClose()">부엉이랑 친구하기</button>
+        <button class="btn" onclick="SigninPopupClose(), LoginPopupOpen()">부엉이랑 친구하기</button>
       </div>
     </section>
     <main class="category-card-container">
@@ -111,41 +111,54 @@
       </nav>
       <div class="category-item-box">
         <ul class="category-box">
-          <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div>
-          </li>
-          <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div></li>
+          <a href="./item-page-logout.html">
             <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div>
-          </li>
-          <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div>
-          </li>
-          <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div>
-          </li>
-          <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
-            <div class="category-box-text">
-              <div class="card-price">100만원</div>
-              <div class="card-name">신발이름!</div>
-            </div>
-          </li>
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
+          <a href="./item-page-logout.html">
+            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
+          <a href="./item-page-logout.html">
+            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
+          <a href="./item-page-logout.html">
+            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
+          <a href="./item-page-logout.html">
+            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
+          <a href="./item-page-logout.html">
+            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+              <div class="category-box-text">
+                <div class="card-price">100만원</div>
+                <div class="card-name">신발이름!</div>
+              </div>
+            </li>
+          </a>
         </ul>
       </div>
     </main>
