--- a/src/category-page-login.html
+++ b/src/category-page-login.html
@@ -134,7 +134,7 @@
           AboutUs
           <div class="footer-text-btn-box footer-text-btn-AboutUs">
             <div class="footer-text-btn-info">
-              <a href="#">우리는 부엉씨의 가족분들이 잠든 시간에 몰래 선물해드리는 모임입니다..!
+              <a href="#">우리는 부엉씨의 친구분들이 잠든 시간에 몰래 선물해드리는 모임입니다..!
               </a>
             </div>
           </div>
