결제완료 페이지 완성

--- a/src/unpaid.html
+++ b/src/unpaid.html
@@ -16,9 +16,9 @@
 <body>
   <div class="fail-payment">
     <p> 결제에 실패하였습니다. </p>
-    <button class="btn goBackTo-btn"><a href="./pay.html">화면으로 돌아가기</a></button>
+    <a href="./pay.html"><button class="btn goBackTo-btn">화면으로 돌아가기</button></a>
     <br>
-    <button class="btn goBackTo-btn"><a href="./main-page-login.html">시작 화면으로 돌아가기</a></button>
+    <a href="./main-page-login.html"><button class="btn goBackTo-btn">시작 화면으로 돌아가기</button></a>
   </div>
 </body>
 </html>
