--- a/src/paid.html
+++ b/src/paid.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="./unpaid.js"></script>
+  <script src="./paid.js"></script>
 </head>
 <body>
   <header>
@@ -26,7 +26,41 @@
 
   <main>
     <section class="bought-items">
-      
+      <div class="bought-item-image"><img src="./img/shoes.svg" alt=""></div>
+      <ul class="bought-item">
+        <li class="bought-item-name"> 에어조던</li>
+        <li class="bought-item-quantity">2개</li>
+        <li class="bought-item-ship-date">내일 도착 보장~!</li>
+        <li><a href="./item-page-login.html"><button class="bought-item-info">제품 정보</button></a></li>
+      </ul>
+    </section>
+    <section class="bought-items">
+      <div class="bought-item-image"><img src="./img/shoes.svg" alt=""></div>
+      <ul class="bought-item">
+        <li class="bought-item-name"> 에어조던</li>
+        <li class="bought-item-quantity">2개</li>
+        <li class="bought-item-ship-date">내일 도착 보장~!</li>
+        <li><a href="./item-page-login.html"><button class="bought-item-info">제품 정보</button></a></li>
+      </ul>
+    </section>
+    <section class="bought-items">
+      <div class="bought-item-image"><img src="./img/shoes.svg" alt=""></div>
+      <ul class="bought-item">
+        <li class="bought-item-name"> 에어조던</li>
+        <li class="bought-item-quantity">2개</li>
+        <li class="bought-item-ship-date">내일 도착 보장~!</li>
+        <li><a href="./item-page-login.html"><button class="bought-item-info">제품 정보</button></a></li>
+      </ul>
+    </section>
+
+    <section class="total-paid-price">
+      1120만원 결제완료!
+    </section>
+    <section class="go-to-site">
+    <a href="./index.html"><button class=" btn go-to-main">
+      Main으로 돌아가기</button></a>
+    <a href="./category-page-login.html"><button class=" btn go-to-category">
+      계속 쇼핑하기</button></a> 
     </section>
   </main>
 </body>
