--- a/src/index.html
+++ b/src/index.html
@@ -7,39 +7,26 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="./index.js"></script>
   <title>index</title>
 </head>
-<body>
-  <body class="back">
-    <header>
-        <nav class="navbar">
-            <a href="#" id="logo">
-            <img src="./images/" width="">
-            </a>
-            <ul class="center">
-            <li class="1">부엉이 신발장</li>
-          </ul>
-            <ul id="menu">
-              <li><a href="#">SEARCH</a></li>
-              <li><a href="#">SIGN IN</a></li> 
-              <li><a href="#">LOGIN</a></li> 
-            </ul>
-        </nav>
-      </header>
-      <footer class="footer">
-    
-        <a href="http://facebook.com">  <!-- ex) 준규-->
-          <img src="./images/Footer_icon/facebook.png"height="20"> <!-- 페이스북아이콘 -->
-        </a>
-        <a href="http://instagram.com"> <!-- ex) 준영 -->
-          <img src="./images/Footer_icon/instargram.png"height="20"> <!-- 인스타아이콘 -->
-        </a>
-        <a href="http://twitter.com"> <!-- ex) 동명 -->
-          <img src="./images/Footer_icon/twitter.png"height="20"> <!-- 트위터아이콘 -->
-        </a>
-        <p>소개내용@@@</p>
-      </footer>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="./index.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <title>index</title>
+</head>
+<body  class="main-page">
+  
+</body>
+</html>
 </body>
 </html>
