--- a/src/category-page-logout.html
+++ b/src/category-page-logout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,6 @@
   <script src="./index.js"></script>
   <title>index</title>
 </head>
-<html lang="en">
   <body>
     <header>
       <nav class="nav-bar">
@@ -29,7 +28,7 @@
       <div class="popup search-popup">
         <div class="btn" onclick="SearchPopupClose()">X</div>
         <div class="search-box">
-          <input type="text" id="search-input">
+          <input type="text" id="search-input" onkeyup="search()">
           <a href="./category-page-logout.html"><img src="./img/search.svg" alt=""></a>
         </div>
       </div>
