--- a/src/item-page-login.html
+++ b/src/item-page-login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +8,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="./item-page.js"></script>
-  <script src="./index.js"></script>
   <title>item-page</title>
 </head>
 <body>
@@ -41,29 +38,32 @@
     <div class="item-order-container">
       <p style="font-weight: bold;">사이즈 옵션</p>
       <div class="size-option">
-        <button class="size-option-btn">245</button>
-        <button class="size-option-btn">250</button>
-        <button class="size-option-btn">255</button>
-        <button class="size-option-btn">260</button>
-        <button class="size-option-btn">265</button>
-        <button class="size-option-btn">270</button>
-        <button class="size-option-btn">275</button>
-        <button class="size-option-btn">280</button>
-        <button class="size-option-btn">295</button>
+        <button class="size-option-btn" onclick="selectSize(245)">245</button>
+        <button class="size-option-btn" onclick="selectSize(250)">250</button>
+        <button class="size-option-btn" onclick="selectSize(255)">255</button>
+        <button class="size-option-btn" onclick="selectSize(260)">260</button>
+        <button class="size-option-btn" onclick="selectSize(265)">265</button>
+        <button class="size-option-btn" onclick="selectSize(270)">270</button>
+        <button class="size-option-btn" onclick="selectSize(275)">275</button>
+        <button class="size-option-btn" onclick="selectSize(280)">280</button>
+        <button class="size-option-btn" onclick="selectSize(295)">295</button>
       </div>
       <br/>
       <div class="color-option">
         <p style="font-weight: bold;">컬러 옵션</p>
-        <input type="color">
+        <input type="color" id="selectedColor">
       </div>
       <div class="chosen-option">
         <p style="font-weight: bold;">선택된 옵션</p>
-        <p>Size : 어쩌구</p>
-        <p>색상 : 어쩌구</p>
+        <span id="selectedSize">Size : 어쩌구</span>
+        <div class="selectedcolor-box">
+          <p>색상 : <div id="changedColor"></div></p>
+        </div>
       </div>
       <div class="decision">
-        <img src="./img/empty_heart.png" alt="" id="empty-heart" >
-        <img src="./img/filled_heart.png" alt="" id="filled-heart" hidden>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+          <path id="heart" d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" id="Like"/>
+        </svg>
         <img src="./img/shopping cart.png" alt="장바구니">
       </div>
   </section>
@@ -85,5 +85,8 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quos veritatis alias aliquid id fugit perferendis, omnis repudiandae molestias magni neque necessitatibus ex repellat sunt impedit debitis, ea consequatur quod voluptate eligendi iste illum minus? Laborum sed labore, sunt maxime itaque at nemo ratione nobis vero nesciunt enim? Nam, pariatur.</p>
     </section>
   </main>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="./item-page.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
